--- a/netflix-frontend/package.json
+++ b/netflix-frontend/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "netflix-frontend",
-  "version": "0.1.0",
+  "name": "netflix-clone",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
+    "dotenv": "^10.0.0",
+    "node-fetch": "^2.6.1",
+    "react-scripts": "^4.0.3"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,3 +38,4 @@
     ]
   }
 }
+
